--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: Poppins, sans-serif;
+  scroll-behavior: smooth;
 }
 .card {
   width: 300px;
